# SAGAN

./: .gitignore  LICENSE  README.md  install_skill.sh  pyproject.toml  spectral_models.tex
.github/workflows/: docs.yml
docs/: Makefile  requirements.txt
docs/source/: conf.py  index.rst  installation.rst  quickstart.rst
example/: abs_fitting_example.ipynb  abs_fitting_example_test.ipynb  demo_include_lsf.ipynb  demo_variable_lsf_fitting.py  fit_abs_mock.ipynb  fit_abs_mock_test.ipynb  fit_abs_mock_test2.ipynb  wrk_sagan_bl_J0925+6409.ipynb  wrk_sagan_bl_J1025+1402.ipynb  wrk_sagan_iras07546.ipynb  wrk_sagan_sdss0006.ipynb
example/data/: J0925_sii.txt  abs_mock_example.fits  ir07546sed.fits  jades-gdn198-v4_g395m-f290lp_1181_68797.spec.fits  mock_data_j0925_hab.txt  mock_resolution_points.fits  mock_two_line_spectrum.fits  spec-0651-52141-0434.fits
galspec/: constants.py  continuum.py  convolution_var.py  dynesty_fit_io.py  emission_lines.py  iron_template.py  mcmc_fit.py  mcmc_fit_io.py  measure_method.py  utils.py
galspec/data/: A0V_HD065900.fits  K0III_HD002952.fits  NIRSpec_prism_resolution.fits
sagan/: __init__.py  constants.py  continuum.py  convolution.py  convolution_var.py  dynesty_fit.py  iron_template.py  line_profile.py  mcmc_fit.py  mcmc_fit_io.py  measure_method.py  plot.py  save_fits.py  stellar_continuum.py  utils.py
skills/: DOCUMENTATION_UPDATES_SUMMARY.md  SKILL.md  function_reference.md  sagan_spectral_fitting.md  typical_bugs.md
skills/fitting_strategies/: NARROW_LINE_TEMPLATE_PLOTTING_GUIDE.md  continuum_fitting.md  practical_tips.md  (+3 more)
(+20 files in other folders)
