[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "galspec"
version = "0.1.0"
description = "Galaxy Spectrum Fitting"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [
    {name = "GalSpec Developers"}
]
keywords = ["astronomy", "spectroscopy", "AGN", "galaxies", "spectral fitting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
]

dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "matplotlib>=3.4",
    "astropy>=5.0",
    "pandas>=1.3",
    "emcee>=3.0",
    "dynesty>=1.2",
    "corner>=2.2",
    "extinction>=0.4",
    "PyAstronomy>=0.18",
    "spectres>=2.0",
    "multiprocess>=0.70",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "jupyter>=1.0",
    "ipython>=8.0",
]

[project.urls]
Homepage = "https://github.com/jyshangguan/GalSpec"
Documentation = "https://github.com/jyshangguan/GalSpec"
Repository = "https://github.com/jyshangguan/GalSpec"

[tool.setuptools]
packages = ["galspec"]

[tool.setuptools.package-data]
galspec = ["data/*"]
